2025-02-01  vaiorabbit  <http://twitter.com/vaiorabbit>

	* https://github.com/erincatto/box2d/commit/28adacf82377d4113f2ed00586141463244b9d10
	* Updated the helper function to use the latest version of Box2D.

2024-12-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Added sample_softbody.rb

2024-12-22  vaiorabbit  <http://twitter.com/vaiorabbit>

	* https://github.com/erincatto/box2d/commit/f377034920c42a26cd498c0a0b1b2e9f2b064989

2024-12-14  vaiorabbit  <http://twitter.com/vaiorabbit>

	* https://github.com/erincatto/box2d/commit/f0763aca7d4dfa8f1c19c2c4a9e66fa6e93ea32e

2024-10-27  vaiorabbit  <http://twitter.com/vaiorabbit>

	* https://github.com/erincatto/box2d/commit/87e13e44378afc42598a4f7e8b2d5289982cdda7

2024-10-14  vaiorabbit  <http://twitter.com/vaiorabbit>

	* https://github.com/erincatto/box2d/commit/aee18c76a3c4442b18730097b9660f0fe866e6b1

2024-10-06  vaiorabbit  <http://twitter.com/vaiorabbit>

	* https://github.com/erincatto/box2d/commit/b864f533c3d851d5c7b55fd6fb4bac00466ff854

2024-09-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* https://github.com/erincatto/box2d/commit/df7373c08a41b7a4ba6edd5d4be200675a948176

2024-09-22  vaiorabbit  <http://twitter.com/vaiorabbit>

	* https://github.com/erincatto/box2d/commit/c56a76daa50726d2e47aad6bb648473ee14d822e

2024-08-18  vaiorabbit  <http://twitter.com/vaiorabbit>

	* make public